feat : add sendMail , feat : add renderMailHtml
